Lab3 main_preemptive_workaround.c works; event_triggered doesn't work

--- a/Labs/Lab3/rios_event_triggered/src/Makefile
+++ b/Labs/Lab3/rios_event_triggered/src/Makefile
@@ -37,6 +37,9 @@ buff.o: buff.s buff.h
 clean:
 	rm -f *.o *.elf *.gdb *.lst $(SD)/tmp/*
 
+clean_main.s:
+	rm -f main.s *.o *.elf *.gdb *.lst $(SD)/tmp/*
+
 main.s: main.c
 	$(CC) -S -Os -fomit-frame-pointer -mshort main.c
 
